versatiL/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versatil-backend-deployment
  namespace: versatil-app
  labels:
    app: versatil-backend
spec:
  selector:
    matchLabels:
      app: versatil-backend
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: versatil-backend
    spec:
      containers:
        - name: versatil-backend
          image: 2702251144acr.azurecr.io/versatil-backend:latest
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: backend-port
